Next release
============

Features
--------

- The concepts of traversal and URL dispatch have been unified.  It is
  now possible to use the same sort of factory as both a traversal
  "root factory" and what used to be referred to as a urldispatch
  "context factory".

- When the root factory argument (as a first argument) passed to
  ``repoze.bfg.router.make_app`` is ``None``, a *default* root factory
  is used.  This is in support of using routes as "root finders"; it
  supplants the idea that there is a default
  ``IRoutesContextFactory``.

- The `view`` ZCML statement and the ``repoze.bfg.view.bfg_view``
  decorator now accept an extra argument: ``route_name``.  If a
  ``route_name`` is specified, it must match the name of a previously
  defined ``route`` statement.  When it is specified, the view will
  only be called when that route matches during a request.

- It is now possible to perfom traversal *after* a route has matched.
  Use the pattern ``*traverse`` in a ``<route>`` ``path`` attribute
  within ZCML, and the path remainder which it matches will be used as
  a traversal path.

- When any route defined matches, the WSGI environment will now
  contain a key ``bfg.routes.route`` (the Route object which matched),
  and a key ``bfg.routes.matchdict`` (the result of calling route.match).

Removals
--------

- The ``IRoutesContext``, ``IRoutesContextFactory``, and
  ``IContextNotFound`` interfaces were removed from
  ``repoze.bfg.interfaces``.  These were never APIs.

- The ``repoze.bfg.urldispatch.RoutesContextNotFound``,
  ``repoze.bfg.urldispatch.RoutesModelTraverser`` and
  ``repoze.bfg.urldispatch.RoutesContextURL`` classes were removed.
  These were also never APIs.

Backwards Incompatibilities
---------------------------

- Changing the default request factory via an IRequestFactory utility
  registration (as used to be documented in the "Hooks" chapter's
  "Changing the request factory" section) is no longer supported.  The